[package]
name = "demo_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "regex", "unicode"] }
demo_isa = { path = "../demo_isa" }
demo_vm = {path = "../demo_vm"}
logos = "0.14.0"
